fix blue clippers on image

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ button {
 }
 
 img {
+    border-radius: 30px;
   box-shadow: 1px 1px 40px 20px rgba(255, 255, 255, 1);
 }
 
